--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,19 @@
 </dependency>
 		
 				
+<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
+<dependency> 
+	<groupId>com.sun.mail</groupId> 
+	<artifactId>javax.mail</artifactId> 
+	<version>1.4.7</version> 
+</dependency>
+<dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-context-support</artifactId>
+	<version>${org.springframework-version}</version>
+</dependency>
+
+
 		<!-- AspectJ -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
