--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
 	<version>${org.springframework-version}</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.9.4</version>
+</dependency>
+
 
 		<!-- AspectJ -->
 		<dependency>
