0730 2051 중간세이브

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,18 @@
     <version>2.5.4</version>
 </dependency>
 
+<!-- json데이터 받는 프로그램 -->
+<!--   <dependency> -->
+<!--       <groupId>com.fasterxml.jackson.core</groupId> -->
+<!--       <artifactId>jackson-databind</artifactId> -->
+<!--       <version>2.9.4</version> -->
+<!--   </dependency> -->
+  <!-- java8 date/time -->
+  <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.9.4</version>
+  </dependency>
 
 		<!-- AspectJ -->
 		<dependency>
